<resources>
    <string name="app_name">MyBarber</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>


    <string name="log_out">Log-out</string>
    <string name="button">Button</string>
    <string name="calendar">Calendar</string>
    <string name="all_haircuts">all Haircuts</string>
    <string name="back">back</string>
    <string name="add">add</string>
    <string name="price">price:</string>
    <string name="haircut">haircut:</string>
    <string name="date">date</string>
    <string name="time">time</string>
    <string name="add_new_appointment">add new appointment</string>
    <string name="calender">Calender</string>
    <string name="example_12_00">example 12:00</string>
    <string name="shoval">SHOVAL</string>
    <string name="select" />
    <string name="select_date">select date</string>
    <string name="appointments_history">_ Appointments History</string>
    <string name="haircuts_gallery">haircuts gallery</string>
    <string name="todo">TODO</string>
    <string name="my_barber">My Barber</string>
</resources>