<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <Button
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="265dp"
        android:text="@string/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/add_button" />

    <Button
        android:id="@+id/add_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="6dp"
        android:layout_marginRight="6dp"
        android:text="@string/add"
        app:layout_constraintBaseline_toBaselineOf="@+id/back_button"
        app:layout_constraintEnd_toStartOf="@+id/back_button"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/date_textview"
        android:layout_width="0dp"
        android:layout_height="43dp"
        android:layout_marginStart="59dp"
        android:layout_marginLeft="59dp"
        android:layout_marginTop="167dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="167dp"
        android:text="@string/date"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/add_button"
        app:layout_constraintEnd_toStartOf="@+id/date_editText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/date_editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="56dp"
        android:layout_marginRight="56dp"
        android:ems="10"
        android:gravity="start|top"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/date_textview"
        app:layout_constraintTop_toTopOf="@+id/date_textview" />

    <TextView
        android:id="@+id/time_textview"
        android:layout_width="0dp"
        android:layout_height="43dp"
        android:layout_marginStart="59dp"
        android:layout_marginLeft="59dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/time"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/date_editText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/date_textview" />

    <EditText
        android:id="@+id/time_editText"
        android:layout_width="215dp"
        android:layout_height="51dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="55dp"
        android:layout_marginRight="55dp"
        android:ems="10"
        android:hint="example 12:00"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/time_textview"
        app:layout_constraintTop_toBottomOf="@+id/date_editText"
        android:autofillHints="" />

</androidx.constraintlayout.widget.ConstraintLayout>