<?xml version="1.0" encoding="UTF-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".allAppointmentActivity">

    <Button
        android:id="@+id/addAppointment_button"
        android:layout_width="251dp"
        android:layout_height="50dp"
        android:layout_marginEnd="9dp"
        android:layout_marginRight="9dp"
        android:background="@drawable/button_shape"
        android:text="@string/add_new_appointment"
        android:textColor="@color/black"
        app:backgroundTint="#919191"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/headline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.007" />

    <Button
        android:id="@+id/back_button2"
        android:layout_width="111dp"
        android:layout_height="45dp"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:background="@drawable/button_shape"
        android:text="@string/back"
        android:textColor="@color/black"
        app:backgroundTint="#919191"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/addAppointment_button"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.096" />

    <ScrollView
        android:id="@+id/ScrollView"
        android:layout_width="399dp"
        android:layout_height="597dp"
        android:layout_marginBottom="4dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/headline"
        app:layout_constraintVertical_bias="0.12">

        <RelativeLayout
            android:id="@+id/activity_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context="com.digitstory.testapplication.RecyclerViewActivity">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recV"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/common_google_signin_btn_text_dark_disabled" />

        </RelativeLayout>
    </ScrollView>

    <TextView
        android:id="@+id/headline"
        android:layout_width="133dp"
        android:layout_height="75dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="28dp"
        android:layout_marginRight="28dp"
        android:layout_marginBottom="8dp"
        android:text="@string/calender"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/ScrollView"
        app:layout_constraintEnd_toStartOf="@+id/addAppointment_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>